# dobbikov_backend_rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  pass_hashing.rs
src/db/: create_tables.rs  lecture_notes.rs  mod.rs  sections.rs  sessions.rs  subsections.rs  users.rs
src/examples/: mod.rs
src/routes/: lecture_notes.rs  mod.rs  responses.rs  sections.rs  subsections.rs  users.rs
src/services/: lecture_notes.rs  mod.rs  sections.rs  static_pages.rs  subsections.rs  users.rs
src/tests/: common.rs  mod.rs
src/tests/db/: lecture_notes.rs  mod.rs  sections.rs  subsections.rs  users.rs
templates/: lecture-notes.js  lecture_notes.html  note_page.html
web/: admin.html  admin.js  create-user.html  create-user.js  login.html  login.js  register.html  register.js  styles.css
