[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.43.0", features=["rt-multi-thread"]}
axum = {version = "0.8.1"}
dotenvy = { version="0.15" }
sqlx = { version="0.8", features=[ "mysql", "runtime-tokio", "tls-native-tls" ] }
argon2 = "0.5.3"
loggit = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
